[project]
name = "demucs-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "demucs>=4.0.1",
    "numpy<2",
    "soundfile==0.12.1",
    "torch==2.2.2",
    "torchaudio==2.2.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
